--- a/requirements.txt
+++ b/requirements.txt
@@ -1,222 +1,2 @@
-absl-py==2.1.0
-altair==5.1.1
-annotated-types==0.7.0
-APScheduler==3.6.3
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==24.2.0
-awkward==2.6.8
-awkward_cpp==38
-backports.tarfile==1.2.0
-beautifulsoup4==4.12.3
-binaryornot==0.4.4
-blinker==1.6.2
-bokeh==3.6.1
-bs4==0.0.2
-cachetools==4.2.2
-canvas==0.7.1
-certifi==2023.7.22
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.3.0
-chronology==1.1
-click==8.1.7
-colorama==0.4.6
-configparser==7.1.0
-contourpy==1.3.1
-control==0.10.1
-cookiecutter==2.6.0
-cron-converter==1.2.1
-cycler==0.12.0
-DateTime==5.5
-decorator==5.1.1
-distlib==0.3.9
-Django==5.1.3
-django-stubs==5.1.1
-django-stubs-ext==5.1.1
-django-timezone-utils==0.15.0
-easyocr==1.7.2
-env-tools==2.3.0
-et-xmlfile==1.1.0
-executing==2.0.1
-fake-useragent==1.5.1
-ffs==0.0.8.2
-figure==1.1
-filelock==3.16.1
-Flask==3.0.2
-flask-cors==6.0.0
-flatbuffers==25.2.10
-fonttools==4.43.0
-fsspec==2024.9.0
-future==1.0.0
-gast==0.6.0
-gitdb==4.0.10
-GitPython==3.1.37
-google-pasta==0.2.0
-grpcio==1.68.0
-h11==0.14.0
-h5py==3.13.0
-idna==3.4
-imageio==2.37.0
-iminuit==2.30.0
-importlib-metadata==6.8.0
-intersection==0.0.2
-ipython==8.30.0
-iso8601==2.1.0
-itsdangerous==2.1.2
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jax==0.5.1
-jaxlib==0.5.1
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.5.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.7.1
-keras==3.9.2
-keyring==25.5.0
-kiwisolver==1.4.5
-lazy_loader==0.4
-letter==0.5
-libclang==18.1.1
-Markdown==3.4.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.10.0
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mediapipe==0.10.21
-ml_dtypes==0.5.1
-more-itertools==10.5.0
-mpmath==1.3.0
-mypy==1.13.0
-mypy-extensions==1.0.0
-namex==0.0.9
-nanoid==2.0.0
-navigation==0.1
-networkx==3.4.2
-ninja==1.11.1.4
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
-openpyxl==3.1.2
-opt_einsum==3.4.0
-optree==0.15.0
-outcome==1.3.0.post0
-packaging==23.1
-pandas==2.2.2
-parso==0.8.3
-patsy==0.5.6
-pillow==10.4.0
-platformdirs==4.3.6
-plotly==5.24.1
-prompt_toolkit==3.0.48
-protobuf==4.25.5
-psycopg==3.2.3
-psycopg-binary==3.2.3
-pure-eval==0.2.2
-pyarrow==13.0.0
-pyclipper==1.3.0.post6
-pycparser==2.22
-pydantic==2.10.2
-pydantic_core==2.27.1
-pydeck==0.8.1b0
-Pygments==2.16.1
-pyhf==0.7.6
-PyJWT==2.10.0
-pyparsing==3.1.1
-PyQt5==5.15.9
-pyqt5-plugins==5.15.9.2.3
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.12.2
-pyqt5-tools==5.15.9.3.3
-pyserial==3.5
-PySocks==1.7.1
-pytesseract==0.3.13
-python-bidi==0.6.6
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-slugify==8.0.4
-python-telegram-bot==13.15
-pytz==2023.3.post1
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-qt5-applications==5.15.2.2.3
-qt5-tools==5.15.2.1.3
-qtwidgets==1.1
-RapidFuzz==3.10.1
-redis==5.2.0
-referencing==0.30.2
-reportlab==4.3.1
-requests==2.31.0
-RestrictedPython==7.4
-rich==13.6.0
-rpds-py==0.10.3
-scikit-image==0.25.2
-scikit-learn==1.6.1
-scipy==1.15.2
-seaborn==0.13.2
-selenium==4.27.1
-sentencepiece==0.2.0
-serial==0.0.97
-shapely==2.1.1
-shellingham==1.5.4
-simplify==0.1.10
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-solve==0.0.0
-sortedcontainers==2.4.0
-sounddevice==0.5.1
-soupsieve==2.6
-spicy==0.16.0
-sqlparse==0.5.2
-stack-data==0.6.3
-statsd==4.0.1
-statsmodels==0.14.1
-streamlit==1.40.2
-sympy==1.13.3
-tenacity==8.2.3
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.1.0
-text-unidecode==1.3
-threadpoolctl==3.6.0
-tifffile==2025.6.1
-tini==3.0.1
-toml==0.10.2
-toolz==0.12.0
-torch==2.7.1
-torchvision==0.22.1
-tornado==6.4.2
-tqdm==4.66.5
-traitlets==5.13.0
-trio==0.27.0
-trio-websocket==0.11.1
-typer==0.14.0
-types-python-dateutil==2.9.0.20241003
-types-PyYAML==6.0.12.20240917
-typing_extensions==4.12.2
-tzdata==2023.3
-tzlocal==5.0.1
-Unidecode==1.3.8
-urllib3==2.0.5
-validators==0.22.0
-virtualenv==20.28.0
-watchdog==3.0.0
-wcwidth==0.2.9
-websocket-client==1.8.0
-Werkzeug==3.0.1
-wrapt==1.17.2
-wsproto==1.2.0
-xyzservices==2024.9.0
-zipp==3.17.0
-zope.interface==7.1.1
+Flask==3.1.2
+psycopg2==2.9.10
