--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,28 +138,135 @@ jobs:
           
           # Configurar Nginx como proxy reverso
           echo "🌐 Configurando Nginx proxy reverso..."
+          
+          # Primero, desactivar el sitio default de Nginx si existe
+          sudo rm -f /etc/nginx/sites-enabled/default
+          
+          # Crear configuración de Nginx mejorada
           sudo tee /etc/nginx/sites-available/location-tracker > /dev/null << 'NGINXCONFIG'
         server {
-            listen 80;
+            listen 80 default_server;
+            listen [::]:80 default_server;
             server_name _;
             
+            # Tamaño máximo de carga
+            client_max_body_size 10M;
+            
+            # Timeouts
+            proxy_connect_timeout 600;
+            proxy_send_timeout 600;
+            proxy_read_timeout 600;
+            send_timeout 600;
+            
             location / {
-                proxy_pass http://localhost:5000;
+                proxy_pass http://127.0.0.1:5000;
+                proxy_http_version 1.1;
+                
+                # Headers importantes para el proxy
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header X-Forwarded-Host $host;
+                proxy_set_header X-Forwarded-Port $server_port;
+                
+                # WebSocket support (si lo necesitas en el futuro)
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+                
+                # Evitar problemas de buffering
+                proxy_buffering off;
+                proxy_request_buffering off;
+            }
+            
+            # Archivos estáticos (si los tienes)
+            location /static {
+                alias $PROJECT_PATH/static;
+                expires 30d;
+                add_header Cache-Control "public, immutable";
+            }
+            
+            # Salud del servicio
+            location /health {
+                access_log off;
+                return 200 "healthy\n";
+                add_header Content-Type text/plain;
+            }
+        }
+
+        # Configuración HTTPS (se activará cuando tengas certificado SSL)
+        server {
+            listen 443 ssl http2 default_server;
+            listen [::]:443 ssl http2 default_server;
+            server_name _;
+            
+            # Los certificados se configurarán más adelante con certbot
+            # ssl_certificate /etc/letsencrypt/live/tu-dominio/fullchain.pem;
+            # ssl_certificate_key /etc/letsencrypt/live/tu-dominio/privkey.pem;
+            
+            # Por ahora, generar certificado autofirmado para testing
+            ssl_certificate /etc/nginx/ssl/self-signed.crt;
+            ssl_certificate_key /etc/nginx/ssl/self-signed.key;
+            
+            # Configuración SSL moderna
+            ssl_protocols TLSv1.2 TLSv1.3;
+            ssl_ciphers HIGH:!aNULL:!MD5;
+            ssl_prefer_server_ciphers on;
+            
+            # Misma configuración de proxy que HTTP
+            client_max_body_size 10M;
+            
+            location / {
+                proxy_pass http://127.0.0.1:5000;
+                proxy_http_version 1.1;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto https;
+                proxy_set_header X-Forwarded-Host $host;
+                proxy_set_header X-Forwarded-Port 443;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+                proxy_buffering off;
+                proxy_request_buffering off;
+            }
+            
+            location /static {
+                alias $PROJECT_PATH/static;
+                expires 30d;
+                add_header Cache-Control "public, immutable";
+            }
+            
+            location /health {
+                access_log off;
+                return 200 "healthy\n";
+                add_header Content-Type text/plain;
             }
         }
         NGINXCONFIG
-                
-          # Habilitar el sitio de Nginx
-          sudo ln -sf /etc/nginx/sites-available/location-tracker /etc/nginx/sites-enabled/default
           
-          # Verificar y reiniciar Nginx
+          # Crear directorio para certificados SSL
+          sudo mkdir -p /etc/nginx/ssl
+          
+          # Generar certificado autofirmado temporal (para testing HTTPS)
+          sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+            -keyout /etc/nginx/ssl/self-signed.key \
+            -out /etc/nginx/ssl/self-signed.crt \
+            -subj "/C=US/ST=State/L=City/O=Organization/CN=localhost"
+          
+          # Habilitar el sitio
+          sudo ln -sf /etc/nginx/sites-available/location-tracker /etc/nginx/sites-enabled/location-tracker
+          
+          # Verificar configuración
           sudo nginx -t
+          
+          # Reiniciar Nginx
           sudo systemctl restart nginx
           sudo systemctl enable nginx
+          
+          # Verificar que Nginx está escuchando en los puertos correctos
+          echo "🔍 Verificando puertos de Nginx..."
+          sudo netstat -tlnp | grep -E ":(80|443)" || true
           
           # Detener aplicación anterior si existe
           echo "🛑 Deteniendo aplicación anterior..."
@@ -169,15 +276,15 @@ jobs:
           # Crear script de inicio para PM2
           echo "📝 Creando script de inicio..."
           cat > start_app.sh << 'SCRIPTEOF'
-        #!/bin/bash
-        SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-        cd "$SCRIPT_DIR"
-        source venv/bin/activate
-        export FLASK_APP=udp_flask_server.py
-        python udp_flask_server.py
-        SCRIPTEOF
-                
-                chmod +x start_app.sh
+            #!/bin/bash
+            SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+            cd "$SCRIPT_DIR"
+            source venv/bin/activate
+            export FLASK_APP=udp_flask_server.py
+            python udp_flask_server.py
+            SCRIPTEOF
+          
+          chmod +x start_app.sh
           
           # Verificar que el script se creó correctamente
           echo "📄 Contenido del script de inicio:"
@@ -215,24 +322,51 @@ jobs:
           source venv/bin/activate
           python -c "import flask; import psycopg2; import dotenv; print('✅ Todas las dependencias Python están instaladas')"
           
-          # Probar conectividad HTTP
-          if curl -s -f http://localhost:5000/ > /dev/null 2>&1; then
+          # Esperar un poco más para que los servicios se estabilicen
+          sleep 5
+          
+          # Probar conectividad Flask directamente
+          echo "🔍 Verificando Flask en puerto 5000..."
+          if curl -s -f -m 5 http://127.0.0.1:5000/ > /dev/null 2>&1; then
             echo "✅ Flask respondiendo en puerto 5000"
           else
             echo "⚠️ Flask no responde en puerto 5000"
-            echo "Verificando proceso..."
+            echo "Verificando proceso Python..."
             ps aux | grep -E "(python|flask)" | grep -v grep || true
             echo "Verificando puerto 5000..."
             sudo netstat -tlnp | grep :5000 || true
           fi
           
-          if curl -s -f http://localhost/ > /dev/null 2>&1; then
-            echo "✅ Nginx respondiendo en puerto 80"
+          # Probar Nginx en puerto 80 (HTTP)
+          echo "🔍 Verificando Nginx en puerto 80..."
+          if curl -s -f -m 5 http://localhost/ > /dev/null 2>&1; then
+            echo "✅ Nginx respondiendo en puerto 80 (HTTP)"
+            echo "Respuesta de la aplicación:"
+            curl -s http://localhost/ | head -n 5 || true
           else
             echo "⚠️ Nginx no responde en puerto 80"
             echo "Estado de Nginx:"
-            sudo systemctl status nginx --no-pager || true
+            sudo systemctl status nginx --no-pager | head -n 10 || true
           fi
+          
+          # Probar Nginx en puerto 443 (HTTPS)
+          echo "🔍 Verificando Nginx en puerto 443..."
+          if curl -s -f -m 5 -k https://localhost/ > /dev/null 2>&1; then
+            echo "✅ Nginx respondiendo en puerto 443 (HTTPS)"
+          else
+            echo "⚠️ Nginx no responde en puerto 443 (puede ser normal si no hay certificado)"
+          fi
+          
+          # Verificar configuración de firewall
+          echo "🔥 Verificando reglas de firewall..."
+          sudo ufw status numbered 2>/dev/null || echo "UFW no está instalado"
+          
+          # Verificar grupos de seguridad (mostrar recordatorio)
+          echo ""
+          echo "⚠️ IMPORTANTE: Asegúrate de que el Security Group de AWS permita:"
+          echo "   - Puerto 80 (HTTP) desde 0.0.0.0/0"
+          echo "   - Puerto 443 (HTTPS) desde 0.0.0.0/0"
+          echo "   - Puerto 22 (SSH) desde tu IP"
           
           # Información de conexión
           echo ""
@@ -240,11 +374,25 @@ jobs:
           echo "📊 Resumen:"
           echo "   - Proyecto en: $PROJECT_PATH"
           echo "   - Aplicación PM2: flask-app-${{ matrix.instance }}"
-          echo "   - Puerto Flask: 5000"
-          echo "   - Puerto Nginx: 80"
+          echo ""
+          echo "🌐 URLs de acceso:"
+          PUBLIC_IP=$(curl -s http://169.254.169.254/latest/meta-data/public-ipv4 2>/dev/null || echo "IP no disponible")
+          echo "   - HTTP:  http://$PUBLIC_IP/"
+          echo "   - HTTPS: https://$PUBLIC_IP/ (certificado autofirmado)"
+          echo ""
+          echo "📝 Para usar un dominio real con HTTPS válido:"
+          echo "   1. Apunta tu dominio al IP: $PUBLIC_IP"
+          echo "   2. Instala certbot: sudo apt-get install certbot python3-certbot-nginx"
+          echo "   3. Obtén certificado: sudo certbot --nginx -d tu-dominio.com"
           echo ""
           echo "📊 Estado final de PM2:"
           pm2 list
+          echo ""
+          echo "🔍 Para ver logs en tiempo real:"
+          echo "   pm2 logs flask-app-${{ matrix.instance }}"
+          echo ""
+          echo "🔄 Para reiniciar la aplicación:"
+          echo "   pm2 restart flask-app-${{ matrix.instance }}"
         ENDSSH
         
         # Limpiar archivos temporales
