--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -139,134 +139,59 @@ jobs:
           # Configurar Nginx como proxy reverso
           echo "🌐 Configurando Nginx proxy reverso..."
           
-          # Primero, desactivar el sitio default de Nginx si existe
+          # Primero, eliminar configuraciones anteriores
           sudo rm -f /etc/nginx/sites-enabled/default
+          sudo rm -f /etc/nginx/sites-enabled/location-tracker
+          sudo rm -f /etc/nginx/sites-available/default
           
-          # Crear configuración de Nginx mejorada
+          # Crear nueva configuración
           sudo tee /etc/nginx/sites-available/location-tracker > /dev/null << 'NGINXCONFIG'
         server {
             listen 80 default_server;
             listen [::]:80 default_server;
             server_name _;
             
-            # Tamaño máximo de carga
-            client_max_body_size 10M;
-            
-            # Timeouts
-            proxy_connect_timeout 600;
-            proxy_send_timeout 600;
-            proxy_read_timeout 600;
-            send_timeout 600;
-            
             location / {
                 proxy_pass http://127.0.0.1:5000;
                 proxy_http_version 1.1;
-                
-                # Headers importantes para el proxy
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_set_header X-Forwarded-Host $host;
-                proxy_set_header X-Forwarded-Port $server_port;
-                
-                # WebSocket support (si lo necesitas en el futuro)
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                
-                # Evitar problemas de buffering
-                proxy_buffering off;
-                proxy_request_buffering off;
+                proxy_cache_bypass $http_upgrade;
+                proxy_read_timeout 90;
+                proxy_connect_timeout 90;
+                proxy_redirect off;
             }
-            
-            # Archivos estáticos (si los tienes)
-            location /static {
-                alias $PROJECT_PATH/static;
-                expires 30d;
-                add_header Cache-Control "public, immutable";
-            }
-            
-            # Salud del servicio
-            location /health {
-                access_log off;
-                return 200 "healthy\n";
-                add_header Content-Type text/plain;
-            }
-        }
-
-        # Configuración HTTPS (se activará cuando tengas certificado SSL)
-        server {
-            listen 443 ssl http2 default_server;
-            listen [::]:443 ssl http2 default_server;
-            server_name _;
-            
-            # Los certificados se configurarán más adelante con certbot
-            # ssl_certificate /etc/letsencrypt/live/tu-dominio/fullchain.pem;
-            # ssl_certificate_key /etc/letsencrypt/live/tu-dominio/privkey.pem;
-            
-            # Por ahora, generar certificado autofirmado para testing
-            ssl_certificate /etc/nginx/ssl/self-signed.crt;
-            ssl_certificate_key /etc/nginx/ssl/self-signed.key;
-            
-            # Configuración SSL moderna
-            ssl_protocols TLSv1.2 TLSv1.3;
-            ssl_ciphers HIGH:!aNULL:!MD5;
-            ssl_prefer_server_ciphers on;
-            
-            # Misma configuración de proxy que HTTP
-            client_max_body_size 10M;
-            
-            location / {
-                proxy_pass http://127.0.0.1:5000;
-                proxy_http_version 1.1;
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto https;
-                proxy_set_header X-Forwarded-Host $host;
-                proxy_set_header X-Forwarded-Port 443;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                proxy_buffering off;
-                proxy_request_buffering off;
-            }
-            
-            location /static {
-                alias $PROJECT_PATH/static;
-                expires 30d;
-                add_header Cache-Control "public, immutable";
-            }
-            
-            location /health {
-                access_log off;
-                return 200 "healthy\n";
-                add_header Content-Type text/plain;
+    
+            # Manejo de errores
+            error_page 502 503 504 /50x.html;
+            location = /50x.html {
+                root /usr/share/nginx/html;
             }
         }
         NGINXCONFIG
           
-          # Crear directorio para certificados SSL
-          sudo mkdir -p /etc/nginx/ssl
+          # Habilitar el sitio (crear enlace simbólico)
+          sudo ln -s /etc/nginx/sites-available/location-tracker /etc/nginx/sites-enabled/location-tracker
           
-          # Generar certificado autofirmado temporal (para testing HTTPS)
-          sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
-            -keyout /etc/nginx/ssl/self-signed.key \
-            -out /etc/nginx/ssl/self-signed.crt \
-            -subj "/C=US/ST=State/L=City/O=Organization/CN=localhost"
+          # Verificar que no hay otros sitios habilitados que puedan interferir
+          echo "📋 Sitios habilitados en Nginx:"
+          ls -la /etc/nginx/sites-enabled/
           
-          # Habilitar el sitio
-          sudo ln -sf /etc/nginx/sites-available/location-tracker /etc/nginx/sites-enabled/location-tracker
-          
-          # Verificar configuración
+          # Verificar configuración de Nginx
           sudo nginx -t
           
-          # Reiniciar Nginx
-          sudo systemctl restart nginx
+          # Reiniciar Nginx completamente
+          sudo systemctl stop nginx
+          sudo systemctl start nginx
           sudo systemctl enable nginx
           
-          # Verificar que Nginx está escuchando en los puertos correctos
-          echo "🔍 Verificando puertos de Nginx..."
-          sudo netstat -tlnp | grep -E ":(80|443)" || true
+          # Verificar estado de Nginx
+          echo "📊 Estado de Nginx:"
+          sudo systemctl status nginx --no-pager
           
           # Detener aplicación anterior si existe
           echo "🛑 Deteniendo aplicación anterior..."
@@ -276,13 +201,13 @@ jobs:
           # Crear script de inicio para PM2
           echo "📝 Creando script de inicio..."
           cat > start_app.sh << 'SCRIPTEOF'
-            #!/bin/bash
-            SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-            cd "$SCRIPT_DIR"
-            source venv/bin/activate
-            export FLASK_APP=udp_flask_server.py
-            python udp_flask_server.py
-            SCRIPTEOF
+        #!/bin/bash
+        SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+        cd "$SCRIPT_DIR"
+        source venv/bin/activate
+        export FLASK_APP=udp_flask_server.py
+        python udp_flask_server.py
+        SCRIPTEOF
           
           chmod +x start_app.sh
           
@@ -322,51 +247,43 @@ jobs:
           source venv/bin/activate
           python -c "import flask; import psycopg2; import dotenv; print('✅ Todas las dependencias Python están instaladas')"
           
-          # Esperar un poco más para que los servicios se estabilicen
+          # Esperar un poco más para que Flask esté completamente iniciado
           sleep 5
           
-          # Probar conectividad Flask directamente
-          echo "🔍 Verificando Flask en puerto 5000..."
+          # Probar conectividad HTTP directamente a Flask
+          echo "Probando Flask directamente en puerto 5000..."
           if curl -s -f -m 5 http://127.0.0.1:5000/ > /dev/null 2>&1; then
             echo "✅ Flask respondiendo en puerto 5000"
+            echo "Respuesta de Flask:"
+            curl -s http://127.0.0.1:5000/ | head -n 5
           else
             echo "⚠️ Flask no responde en puerto 5000"
-            echo "Verificando proceso Python..."
+            echo "Verificando proceso Flask..."
             ps aux | grep -E "(python|flask)" | grep -v grep || true
             echo "Verificando puerto 5000..."
             sudo netstat -tlnp | grep :5000 || true
+            echo "Verificando logs de PM2..."
+            pm2 logs flask-app-${{ matrix.instance }} --lines 30 --nostream || true
           fi
           
-          # Probar Nginx en puerto 80 (HTTP)
-          echo "🔍 Verificando Nginx en puerto 80..."
-          if curl -s -f -m 5 http://localhost/ > /dev/null 2>&1; then
-            echo "✅ Nginx respondiendo en puerto 80 (HTTP)"
-            echo "Respuesta de la aplicación:"
-            curl -s http://localhost/ | head -n 5 || true
-          else
-            echo "⚠️ Nginx no responde en puerto 80"
-            echo "Estado de Nginx:"
-            sudo systemctl status nginx --no-pager | head -n 10 || true
-          fi
-          
-          # Probar Nginx en puerto 443 (HTTPS)
-          echo "🔍 Verificando Nginx en puerto 443..."
-          if curl -s -f -m 5 -k https://localhost/ > /dev/null 2>&1; then
-            echo "✅ Nginx respondiendo en puerto 443 (HTTPS)"
-          else
-            echo "⚠️ Nginx no responde en puerto 443 (puede ser normal si no hay certificado)"
-          fi
-          
-          # Verificar configuración de firewall
-          echo "🔥 Verificando reglas de firewall..."
-          sudo ufw status numbered 2>/dev/null || echo "UFW no está instalado"
-          
-          # Verificar grupos de seguridad (mostrar recordatorio)
+          # Probar Nginx en puerto 80
           echo ""
-          echo "⚠️ IMPORTANTE: Asegúrate de que el Security Group de AWS permita:"
-          echo "   - Puerto 80 (HTTP) desde 0.0.0.0/0"
-          echo "   - Puerto 443 (HTTPS) desde 0.0.0.0/0"
-          echo "   - Puerto 22 (SSH) desde tu IP"
+          echo "Probando Nginx en puerto 80..."
+          if curl -s -f -m 5 http://127.0.0.1/ 2>&1 | grep -q "Real-time Coordinate Tracker"; then
+            echo "✅ Nginx está haciendo proxy correctamente a Flask"
+          else
+            echo "⚠️ Nginx no está haciendo proxy a Flask correctamente"
+            echo "Respuesta actual de Nginx:"
+            curl -s http://127.0.0.1/ | head -n 10
+            echo ""
+            echo "Verificando configuración de Nginx:"
+            sudo nginx -T | grep -A 10 "server {" || true
+          fi
+          
+          # Verificar que no hay conflictos de puertos
+          echo ""
+          echo "📊 Puertos en escucha:"
+          sudo netstat -tlnp | grep -E ":(80|5000)" || true
           
           # Información de conexión
           echo ""
@@ -374,25 +291,11 @@ jobs:
           echo "📊 Resumen:"
           echo "   - Proyecto en: $PROJECT_PATH"
           echo "   - Aplicación PM2: flask-app-${{ matrix.instance }}"
-          echo ""
-          echo "🌐 URLs de acceso:"
-          PUBLIC_IP=$(curl -s http://169.254.169.254/latest/meta-data/public-ipv4 2>/dev/null || echo "IP no disponible")
-          echo "   - HTTP:  http://$PUBLIC_IP/"
-          echo "   - HTTPS: https://$PUBLIC_IP/ (certificado autofirmado)"
-          echo ""
-          echo "📝 Para usar un dominio real con HTTPS válido:"
-          echo "   1. Apunta tu dominio al IP: $PUBLIC_IP"
-          echo "   2. Instala certbot: sudo apt-get install certbot python3-certbot-nginx"
-          echo "   3. Obtén certificado: sudo certbot --nginx -d tu-dominio.com"
+          echo "   - Puerto Flask: 5000"
+          echo "   - Puerto Nginx: 80"
           echo ""
           echo "📊 Estado final de PM2:"
           pm2 list
-          echo ""
-          echo "🔍 Para ver logs en tiempo real:"
-          echo "   pm2 logs flask-app-${{ matrix.instance }}"
-          echo ""
-          echo "🔄 Para reiniciar la aplicación:"
-          echo "   pm2 restart flask-app-${{ matrix.instance }}"
         ENDSSH
         
         # Limpiar archivos temporales
