--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,60 +138,28 @@ jobs:
           
           # Configurar Nginx como proxy reverso
           echo "🌐 Configurando Nginx proxy reverso..."
-          
-          # Primero, eliminar configuraciones anteriores
-          sudo rm -f /etc/nginx/sites-enabled/default
-          sudo rm -f /etc/nginx/sites-enabled/location-tracker
-          sudo rm -f /etc/nginx/sites-available/default
-          
-          # Crear nueva configuración
           sudo tee /etc/nginx/sites-available/location-tracker > /dev/null << 'NGINXCONFIG'
         server {
-            listen 80 default_server;
-            listen [::]:80 default_server;
+            listen 80;
             server_name _;
             
             location / {
-                proxy_pass http://127.0.0.1:5000;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection 'upgrade';
+                proxy_pass http://localhost:5000;
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_cache_bypass $http_upgrade;
-                proxy_read_timeout 90;
-                proxy_connect_timeout 90;
-                proxy_redirect off;
-            }
-    
-            # Manejo de errores
-            error_page 502 503 504 /50x.html;
-            location = /50x.html {
-                root /usr/share/nginx/html;
             }
         }
         NGINXCONFIG
+                
+          # Habilitar el sitio de Nginx
+          sudo ln -sf /etc/nginx/sites-available/location-tracker /etc/nginx/sites-enabled/default
           
-          # Habilitar el sitio (crear enlace simbólico)
-          sudo ln -s /etc/nginx/sites-available/location-tracker /etc/nginx/sites-enabled/location-tracker
-          
-          # Verificar que no hay otros sitios habilitados que puedan interferir
-          echo "📋 Sitios habilitados en Nginx:"
-          ls -la /etc/nginx/sites-enabled/
-          
-          # Verificar configuración de Nginx
+          # Verificar y reiniciar Nginx
           sudo nginx -t
-          
-          # Reiniciar Nginx completamente
-          sudo systemctl stop nginx
-          sudo systemctl start nginx
+          sudo systemctl restart nginx
           sudo systemctl enable nginx
-          
-          # Verificar estado de Nginx
-          echo "📊 Estado de Nginx:"
-          sudo systemctl status nginx --no-pager
           
           # Detener aplicación anterior si existe
           echo "🛑 Deteniendo aplicación anterior..."
@@ -208,8 +176,8 @@ jobs:
         export FLASK_APP=udp_flask_server.py
         python udp_flask_server.py
         SCRIPTEOF
-          
-          chmod +x start_app.sh
+                
+                chmod +x start_app.sh
           
           # Verificar que el script se creó correctamente
           echo "📄 Contenido del script de inicio:"
@@ -247,43 +215,24 @@ jobs:
           source venv/bin/activate
           python -c "import flask; import psycopg2; import dotenv; print('✅ Todas las dependencias Python están instaladas')"
           
-          # Esperar un poco más para que Flask esté completamente iniciado
-          sleep 5
-          
-          # Probar conectividad HTTP directamente a Flask
-          echo "Probando Flask directamente en puerto 5000..."
-          if curl -s -f -m 5 http://127.0.0.1:5000/ > /dev/null 2>&1; then
+          # Probar conectividad HTTP
+          if curl -s -f http://localhost:5000/ > /dev/null 2>&1; then
             echo "✅ Flask respondiendo en puerto 5000"
-            echo "Respuesta de Flask:"
-            curl -s http://127.0.0.1:5000/ | head -n 5
           else
             echo "⚠️ Flask no responde en puerto 5000"
-            echo "Verificando proceso Flask..."
+            echo "Verificando proceso..."
             ps aux | grep -E "(python|flask)" | grep -v grep || true
             echo "Verificando puerto 5000..."
             sudo netstat -tlnp | grep :5000 || true
-            echo "Verificando logs de PM2..."
-            pm2 logs flask-app-${{ matrix.instance }} --lines 30 --nostream || true
           fi
           
-          # Probar Nginx en puerto 80
-          echo ""
-          echo "Probando Nginx en puerto 80..."
-          if curl -s -f -m 5 http://127.0.0.1/ 2>&1 | grep -q "Real-time Coordinate Tracker"; then
-            echo "✅ Nginx está haciendo proxy correctamente a Flask"
+          if curl -s -f http://localhost/ > /dev/null 2>&1; then
+            echo "✅ Nginx respondiendo en puerto 80"
           else
-            echo "⚠️ Nginx no está haciendo proxy a Flask correctamente"
-            echo "Respuesta actual de Nginx:"
-            curl -s http://127.0.0.1/ | head -n 10
-            echo ""
-            echo "Verificando configuración de Nginx:"
-            sudo nginx -T | grep -A 10 "server {" || true
+            echo "⚠️ Nginx no responde en puerto 80"
+            echo "Estado de Nginx:"
+            sudo systemctl status nginx --no-pager || true
           fi
-          
-          # Verificar que no hay conflictos de puertos
-          echo ""
-          echo "📊 Puertos en escucha:"
-          sudo netstat -tlnp | grep -E ":(80|5000)" || true
           
           # Información de conexión
           echo ""
