--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Flask App to 4 EC2 Instances
 
 on:
   push:
-    branches: [ main, Oliver-branch, Hernando-branch, Alan-branch, Sebastian-branch ]
+    branches: [ main ]
     paths:
       # Se activa si hay cambios en el proyecto o el propio workflow
       - 'Proyecto_1_Diseno/**'
